<resources>
    <string name="app_name">螃蟹社交</string>
    <string name="title_activity_login">登录</string>
    <string name="prompt_email">请输入手机号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录/注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_mobile">手机号无效</string>
    <string name="error_invalid_password">密码太短啦</string>
    <string name="error_incorrect_password">密码与账号不匹配</string>
    <string name="error_field_required">必填项</string>
    <string name="error_password_length">密码必须未6~20位</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">螃蟹社交</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_conversation">聊天</string>
    <string name="nav_friend">好友</string>
    <string name="nav_timeline">圈子</string>
    <string name="nav_setting">设置</string>
    <string name="title_activity_verify_phone">验证手机</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="send_sms_captcha_desc">我们已经发送了验证码到你的手机</string>
    <string name="prompt_smscode">请输入手机验证码</string>
    <string name="btn_verify">确定</string>
    <string name="title_activity_chat">唠嗑</string>
    <string name="ink_font">sans-serif-black</string>
    <string name="title_activity_permission">PermissionActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="required_permissions_promptable_title">要继续操作，请授予螃蟹社交相关权限</string>
    <string name="required_permissions_promptable_promo">
        螃蟹社交需要：\n
        1. 通讯录权限用于匹配好友\n
        2. 短信权限用于验证短信验证码\n
        3. 录音权限用于发送对讲信息\n
        4. 设备存储用于存储照片和视频文件\n
    </string>
    <string name="v7_preference_off">关</string>
    <string name="v7_preference_on">开</string>
    <string name="abc_action_bar_home_description">转到主屏幕</string>
    <string name="abc_action_bar_home_description_format">%1$s：%2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s - %2$s：%3$s</string>
    <string name="abc_action_bar_up_description">转到上一层级</string>
    <string name="abc_action_menu_overflow_description">更多选项</string>
    <string name="abc_action_mode_done">完成</string>
    <string name="abc_activity_chooser_view_see_all">查看全部</string>
    <string name="abc_activitychooserview_choose_application">选择应用</string>
    <string name="abc_capital_off">关闭</string>
    <string name="abc_capital_on">开启</string>
    <string name="abc_search_hint">搜索…</string>
    <string name="abc_searchview_description_clear">清除查询</string>
    <string name="abc_searchview_description_query">搜索查询</string>
    <string name="abc_searchview_description_search">搜索</string>
    <string name="abc_searchview_description_submit">提交查询</string>
    <string name="abc_searchview_description_voice">语音搜索</string>
    <string name="abc_shareactionprovider_share_with">分享方式</string>
    <string name="abc_shareactionprovider_share_with_application">通过%s分享</string>
    <string name="abc_toolbar_collapse_description">收起</string>
    <string name="accessbility_suggestion_dropdown_closed">没有任何建议</string>
    <string name="accessbility_suggestion_dropdown_opened">联系人推荐已打开</string>
    <string name="account_link_name">^1 已关联到 螃蟹社交</string>
    <string name="action_add_contact">添加联系人</string>
    <string name="action_app_feedback">发送关于 螃蟹社交 的反馈</string>
    <string name="action_block">屏蔽</string>
    <string name="action_clear_history">清除对话记录</string>
    <string name="action_confirm_multiselect">确认选择</string>
    <string name="action_confirm_selection">确认选择</string>
    <string name="action_conversation_info_group">群组对话详细信息</string>
    <string name="action_conversation_info_one_on_one">一对一对话详细信息</string>
    <string name="action_create_one_on_one">发送消息</string>
    <string name="action_debug_options">调试</string>
    <string name="action_delete">删除</string>
    <string name="action_delete_group">退出并删除聊天记录</string>
    <string name="action_delete_message">删除</string>
    <string name="action_download">下载</string>
    <string name="action_duo_call">通过 Duo 呼叫</string>
    <string name="action_edit_group">编辑群组</string>
    <string name="action_edit_profile">修改个人资料</string>
    <string name="action_help">帮助</string>
    <string name="action_help_and_feedback">帮助与反馈</string>
    <string name="action_label">回车</string>
    <string name="action_menu_profile">个人资料</string>
    <string name="action_multiselect">选择多张图片</string>
    <string name="action_mute_group">忽略群组</string>
    <string name="action_mute_one_on_one">忽略</string>
    <string name="action_notification_off">关闭通知</string>
    <string name="action_notification_on">开启通知</string>
    <string name="action_offensive_content_feedback">举报  智能助理发送的攻击性内容</string>
    <string name="action_opa_feedback">发送关于  智能助理的反馈</string>
    <string name="action_photo_library">打开照片库</string>
    <string name="action_remove_member">从群组中移除</string>
    <string name="action_save">保存</string>
    <string name="action_save_to_home_screen">保存到主屏幕</string>
    <string name="action_search">搜索</string>
    <string name="action_search_button">“搜索”按钮</string>
    <string name="action_send">发送</string>
    <string name="action_settings">设置</string>
    <string name="action_share">分享</string>
    <string name="action_start_new_conversation_button">“发起新对话”按钮</string>
    <string name="action_unblock">取消屏蔽</string>
    <string name="action_unmute_group">取消忽略群组</string>
    <string name="action_unmute_one_on_one">取消忽略</string>
    <string name="action_view_profile">查看个人资料</string>
    <string name="activity_not_found_message">找不到合适的应用</string>
    <string name="add_contact_button_text">添加联系人</string>
    <string name="add_people">添加成员</string>
    <string name="add_users_title">添加用户</string>
    <string name="albums">相册</string>
    <string name="angles_theme_name">冰</string>
    <string name="annotateContentDescription">修改图片</string>
    <string name="arcs_theme_name">弧形</string>
    <string name="attachMediaButtonContentDescription">添加附件</string>
    <string name="attachment_file_description">保存的彩信附件</string>
    <string name="attachment_save_error">无法保存附件</string>
    <string name="attachment_saved_to_downloads">附件已保存至“下载内容”</string>
    <string name="audio_attachment_content_description">语音附件</string>
    <string name="audio_pause_content_description">暂停</string>
    <string name="audio_play_content_description">播放语音附件</string>
    <string name="audio_record_hold_hint_text">触摸并按住即可录制消息。</string>
    <string name="audio_record_slide_hint_text">滑动即可取消</string>
    <string name="audio_record_view_content_description">触摸并按住即可录制语音</string>
    <string name="audio_recording_error">无法保存语音，请重试。</string>
    <string name="audio_recording_replay_failed">无法播放语音。</string>
    <string name="audio_recording_start_failed">无法录音，请稍后再试。</string>
    <string name="autoAwesomeImageViewContentDescription">预览表情符号 GIF</string>
    <string name="automatically_download_media_pref_summary">自动下载照片和视频</string>
    <string name="automatically_download_media_pref_title">一律下载媒体</string>
    <string name="avatar_selected_checkmark">群组头像已选择的对勾标记</string>
    <string name="aztec_theme_name">阿兹特克</string>
    <string name="back">返回</string>
    <string name="backchannel_compose_hint_text">进行隐身聊天</string>
    <string name="backchannel_conversation_list_preview_incoming">收到了一条消息</string>
    <string name="backchannel_conversation_list_preview_outgoing">发送了一条消息</string>
    <string name="backchannel_feature_body">通过端到端加密、设置消息有效时间和使用私密通知，确保聊天内容安全无虞</string>
    <string name="backchannel_feature_title">进入隐身模式</string>
    <string name="backchannel_new_conversation_description">通过端到端加密、设置消息有效时间和使用私密通知，可确保聊天内容安全无虞</string>
    <string name="backchannel_new_conversation_intro">你向%s发起了隐身聊天</string>
    <string name="balloon_dark_theme_name">深色气球</string>
    <string name="balloon_light_theme_name">浅色气球</string>
    <string name="block_confirmation_message">"-- 你和对方将无法进行一对一聊天
-- 你将无法创建包含此人的群聊，但仍然可以查看对方在你们共同参与的群组对话中发送的聊天消息"</string>
    <string name="block_confirmation_title">要屏蔽%s吗？</string>
    <string name="block_contact_title">屏蔽%s</string>
    <string name="block_text_button">屏蔽</string>
    <string name="blocked_contacts_empty">你尚未屏蔽任何人</string>
    <string name="blocked_contacts_title">屏蔽的联系人</string>
    <string name="blocked_read_only_banner">你已屏蔽此人。要与对方聊天，请先取消屏蔽。</string>
    <string name="blocked_toast_message">已屏蔽联系人</string>
    <string name="bot_memory_cleared">动态已删除</string>
    <string name="call_me">打电话给我</string>
    <string name="camera_cancel_recording">停止录制视频</string>
    <string name="camera_error_failure_taking_picture">无法拍照</string>
    <string name="camera_error_opening">无法使用相机</string>
    <string name="camera_error_storage_fail">无法保存媒体</string>
    <string name="camera_error_unknown">无法使用相机</string>
    <string name="camera_error_video_init_fail">无法使用视频拍摄功能</string>
    <string name="camera_media_failure">无法加载相机图像</string>
    <string name="camera_not_supported_in_multi_window">要使用相机，请退出多窗口模式</string>
    <string name="camera_permission_description">你必须先授予相机的使用权限</string>
    <string name="camera_start_recording">开始录制视频</string>
    <string name="camera_stop_recording">停止录制并添加视频附件</string>
    <string name="camera_switch_camera_facing">在前置和后置相机之间切换</string>
    <string name="camera_switch_full_screen">切换到全屏相机模式</string>
    <string name="camera_switch_to_still_mode">拍照</string>
    <string name="camera_switch_to_video_mode">拍摄视频</string>
    <string name="camera_take_photo_failed">无法拍照，请稍后再试。</string>
    <string name="camera_take_picture">拍照</string>
    <string name="change_conversation_theme_subtitle">此选项会更改你和%s的对话主题背景</string>
    <string name="change_conversation_theme_title">更改聊天主题背景</string>
    <string name="chips_action_cancel">取消</string>
    <string name="chips_action_copy">复制</string>
    <string name="chips_permission_text">允许推荐联系人</string>
    <string name="chips_text_delete_button_content_description">删除文字</string>
    <string name="choose_a_photo">选择群组头像（可选）</string>
    <string name="clear_bot_memory_cancel_button">保留</string>
    <string name="clear_bot_memory_confirmation_button">删除</string>
    <string name="clear_bot_memory_text">此操作会删除所有消息，并让“%s”清除你的信息</string>
    <string name="clear_bot_memory_title">删除动态</string>
    <string name="clickable_profile_photo_description">%s的个人资料照片</string>
    <string name="clouds_theme_name">云朵</string>
    <string name="color_black">黑色</string>
    <string name="color_blue">蓝色</string>
    <string name="color_green">绿色</string>
    <string name="color_picker_default_title">选择颜色</string>
    <string name="color_purple">紫色</string>
    <string name="color_red">红色</string>
    <string name="did_not_get_code_label">没有收到验证码吗？</string>
    <string name="next">下一步</string>
    <string name="phone_number_hint">输入你的电话号码</string>
    <string name="registration_activity_confirm_code">请输入短信验证码</string>
    <string name="registration_activity_consent">注册即表示你同意遵守《<a href="https://www..com/policies/terms/">条款及条件</a>》和《<a href="https://www..com/policies/privacy/">隐私权政策</a>》，并同意 螃蟹社交 定期向  发送你的联系人信息和位置信息。知道你号码的人可通过各种  服务与你联系。</string>
    <string name="registration_activity_subtitle">输入您的手机号,如果为新用户,稍候会向该手机号发送一条短信验证码</string>
    <string name="registration_activity_pasword_hint">老用户输入您的密码\r\n新用户则输入您要设置的密码</string>
    <string name="registration_activity_title">登录/注册</string>
    <string name="self_profile_image_content_description">你的个人资料照片</string>
    <string name="settings">设置</string>
    <string name="welcome_profile_back_to_selfie">拍摄个人资料照片</string>
    <string name="your_name_text_hint">你叫什么名字？</string>
    <string name="login_password_hint">输入密码</string>
</resources>