<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_conversation"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_conversation" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_friend" />
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_timeline" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_setting" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_share"
                android:title="意见反馈" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="退出登录" />
        </menu>
    </item>

</menu>
