<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="48.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/help_button"
                    android:layout_width="@dimen/min_touch_target_size"
                    android:layout_height="@dimen/min_touch_target_size"
                    android:layout_gravity="end"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/action_help_and_feedback"
                    android:src="@drawable/ic_help_outline_24" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="32.0dip">

                <TextView
                    style="@style/Welcome.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_activity_title" />

                <TextView
                    style="@style/Welcome.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8.0dip"
                    android:text="@string/registration_activity_subtitle" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/phone_number"
                    style="@style/Welcome.EditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:hint="@string/phone_number_hint"
                    android:inputType="phone"
                    android:textDirection="ltr" />

                <TextView
                    style="@style/Welcome.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dip"
                    android:text="@string/registration_activity_pasword_hint" />
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_login_password"
                    style="@style/Welcome.EditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:hint="@string/login_password_hint"
                    android:textDirection="locale" />



                <TextView
                    android:id="@+id/consent_text"
                    style="@style/Welcome.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24.0dip"
                    android:text="@string/registration_activity_consent"
                    android:textSize="12.0sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:layout_gravity="bottom"
        android:background="@color/quantum_cyan700">

        <Button
            android:id="@+id/register_action"
            style="@style/Welcome.Footer.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:drawableRight="@drawable/ic_keyboard_arrow_right_light"
            android:onClick="onNext"
            android:alpha="0.6"
            android:text="@string/next" />
    </FrameLayout>
</FrameLayout>
