<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="48.0dip"
        android:layout_marginLeft="56.0dip"
        android:layout_marginRight="56.0dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/enable_permission_title"
            style="@style/Welcome.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/required_permissions_promptable_title" />

        <TextView
            android:id="@+id/enable_permission_procedure"
            style="@style/Welcome.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16.0dip"
            android:text="@string/required_permissions_promptable_promo" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48.0dip"
            android:importantForAccessibility="no"
            android:src="@drawable/empty_permissions" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:layout_gravity="bottom"
        android:background="@color/quantum_cyan700">

        <Button
            android:id="@+id/next"
            style="@style/Welcome.Footer.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/next"
            android:text="@string/next" />

        <Button
            android:id="@+id/settings"
            style="@style/Welcome.Footer.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/settings"
            android:text="@string/settings"
            android:visibility="gone" />
    </FrameLayout>
</merge>