<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vip.xioix.crab.VerifyMobileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/send_sms_captcha_desc"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tv_smscaptcha_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="24sp"
        />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_verify_smscode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_smscode"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>



    <Button
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_verify"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:onClick="onConfirmClick"
        android:textSize="16sp" />
</LinearLayout>
