<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="48.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@id/help_button"
                    android:layout_width="@dimen/min_touch_target_size"
                    android:layout_height="@dimen/min_touch_target_size"
                    android:layout_gravity="end"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/action_help_and_feedback"
                    android:src="@drawable/ic_help_outline_24" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/welcome_standard_padding"
                android:paddingRight="@dimen/welcome_standard_padding">

                <TextView
                    style="@style/Welcome.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_activity_confirm_code" />

                <TextView
                    android:id="@+id/confirm_code_details"
                    style="@style/Welcome.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8.0dip"
                    android:text="@string/registration_activity_confirm_code" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/pincode_edittext"
                    style="@style/Welcome.EditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="36.0sp"
                    android:textDirection="ltr" />


                <TextView
                    style="@style/Welcome.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8.0dip"
                    android:text="@string/did_not_get_code_label" />

                <TextView
                    android:id="@+id/get_new_code_or_wait"
                    style="@style/Welcome.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:layout_gravity="bottom"
        android:background="@color/quantum_cyan700">

        <Button
            android:id="@+id/verify_action"
            style="@style/Welcome.Footer.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:alpha="0.6"
            android:drawableEnd="@drawable/quantum_ic_navigate_next_white_24"
            android:drawableRight="@drawable/quantum_ic_navigate_next_white_24"
            android:enabled="false"
            android:text="@string/next" />
    </FrameLayout>
</FrameLayout>